--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,7 +12,7 @@
   <script src="test/lib/jasmine-2.4.1/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="lib/moment.min.js"></script>
+  <script src="lib/moment.js"></script>
   <script src="PersonalFinanceEngine.core.js"></script>
 
   <!-- include spec files here... -->
