Removed the separate tax module. The code for managing taxes will be incorporated into the main module.

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,7 +13,7 @@
 
   <!-- include source files here... -->
   <script src="lib/moment.js"></script>
-  <script src="PersonalFinanceEngine.core.js"></script>
+  <script src="PersonalFinanceEngine.js"></script>
 
   <!-- include spec files here... -->
   <script src="test/spec/core/modelParameters.spec.js"></script>
