Created and organized the files for unit testing when the canada taxModel is enabled.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <script src="test/spec/core/financialObjects.spec.js"></script>
   <script src="test/spec/core/timeline.spec.js"></script>
   <script src="test/spec/core/calculate.spec.js"></script>
+  <script src="test/spec/locales/canada.spec.js"></script>
 </head>
 
 <body>
